fixes post image so it's center aligned and doesn't overflow the container.

--- a/src/scss/modules/_post_list_item.scss
+++ b/src/scss/modules/_post_list_item.scss
@@ -13,14 +13,19 @@
   .post-list-item-photo {
     flex: 1;
     display: flex;
-    height: 5em;
+    height: auto;
     width: auto;
     //align-items: center;
     padding-bottom: rem-calc(5px);
     @media #{$medium-up} {
       padding-bottom: rem-calc(0);
     }
-
+    
+    img {
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+    }
   }
 
   .post-list-item-content {
